--- a/index.html
+++ b/index.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-</head>
-<header>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
+  </head>
+  <header>
     <nav class="navbar">
-        <ul class="nav-links">
-            <li><a href="#sobre-mi">Sobre mi</a></li>
-            <li><a href="#proyectos">Proyectos</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
+      <ul class="nav-links">
+        <li><a href="#sobre-mi">Sobre mi</a></li>
+        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#contacto">Contacto</a></li>
+      </ul>
     </nav>
-</header>
-<body>
+  </header>
+  <body>
     <div class="container" id="sobre-mi">
-        <section>
-            <h1 class="title-gradient">Sobre mi</h1>
-        <img class="perfil" src="img/perfil.png" alt="foto de perfil">
+      <section>
+        <h1 class="title">Sobre mi</h1>
+        <img class="perfil" src="img/perfil.png" alt="foto de perfil" />
         <h1>Kevin Bruno</h1>
-        <p>Soy una persona proactiva, organizada y con gran capacidad para el trabajo en equipo. Me adapto con facilidad a nuevos entornos y disfruto aprender constantemente. Cuento con sólidas habilidades de comunicación, resolución de problemas y pensamiento crítico, lo que me permite aportar soluciones eficientes y colaborativas en cualquier proyecto.
-            En cuanto a mis habilidades técnicas, tengo experiencia en [aquí podés personalizar: desarrollo web / análisis de datos / gestión de proyectos, etc.], manejo avanzado de herramientas como [ej: Excel, Python, Java, SQL, etc.], y conocimientos sólidos en [aquí podés agregar metodologías, herramientas, o conocimientos relevantes como Scrum, UX/UI, redes, etc.].
-            Busco seguir creciendo profesionalmente en un entorno dinámico donde pueda seguir desarrollando tanto mis competencias técnicas como personales.</p>
-        </section>
+        <h2>Fron-End developer</h2>
+        <p>
+          Soy una persona proactiva, organizada y con gran capacidad para el
+          trabajo en equipo. Me adapto con facilidad a nuevos entornos y
+          disfruto aprender constantemente. Cuento con sólidas habilidades de
+          comunicación, resolución de problemas y pensamiento crítico, lo que me
+          permite aportar soluciones eficientes y colaborativas en cualquier
+          proyecto. En cuanto a mis habilidades técnicas, tengo experiencia en
+          [aquí podés personalizar: desarrollo web / análisis de datos / gestión
+          de proyectos, etc.], manejo avanzado de herramientas como [ej: Excel,
+          Python, Java, SQL, etc.], y conocimientos sólidos en [aquí podés
+          agregar metodologías, herramientas, o conocimientos relevantes como
+          Scrum, UX/UI, redes, etc.]. Busco seguir creciendo profesionalmente en
+          un entorno dinámico donde pueda seguir desarrollando tanto mis
+          competencias técnicas como personales.
+        </p>
+      </section>
     </div>
-    <h1>Proyectos</h1>
-    <div class="container" id="proyectos">
-        <div class="card">
-            <img class="portada" src="img/calculadora.png" alt="calculadora">
-            <p></p>
-        </div>
+    <div class="card" style="width: 18rem">
+      <img
+        src="img/calculadora.png"
+        class="card-img-top img-thumbnail"
+        alt="..."
+      />
+      <div class="card-body">
+        <h5 class="card-title">Calculadora</h5>
+        <p class="card-text">
+          Calculadora para operaciones simples como: suma,resta multiplicacion y
+          division, hecha con HTML5 CSS3 y JavaScript
+        </p>
+      </div>
+      <div class="card-body">
+        <a href="#" class="card-link">Card link</a>
+      </div>
     </div>
-
-
-</body>
+    <footer></footer>
+  </body>
 </html>
