--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Special+Gothic+Expanded+One&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <header>
     <nav class="navbar">
@@ -22,33 +28,49 @@
     </nav>
   </header>
   <body>
-    <div class="container" id="sobre-mi">
-      <section>
+    <div class="container">
+      <div class="row">
         <h1 class="title">Sobre mi</h1>
-        <img class="perfil" src="img/perfil.png" alt="foto de perfil" />
-        <h1>Kevin Bruno</h1>
-        <h2>Fron-End developer</h2>
-        <p>
-          Soy una persona proactiva, organizada y con gran capacidad para el
-          trabajo en equipo. Me adapto con facilidad a nuevos entornos y
-          disfruto aprender constantemente. Cuento con sólidas habilidades de
-          comunicación, resolución de problemas y pensamiento crítico, lo que me
-          permite aportar soluciones eficientes y colaborativas en cualquier
-          proyecto. En cuanto a mis habilidades técnicas, tengo experiencia en
-          [aquí podés personalizar: desarrollo web / análisis de datos / gestión
-          de proyectos, etc.], manejo avanzado de herramientas como [ej: Excel,
-          Python, Java, SQL, etc.], y conocimientos sólidos en [aquí podés
-          agregar metodologías, herramientas, o conocimientos relevantes como
-          Scrum, UX/UI, redes, etc.]. Busco seguir creciendo profesionalmente en
-          un entorno dinámico donde pueda seguir desarrollando tanto mis
-          competencias técnicas como personales.
-        </p>
-      </section>
+        <div class="col-2 mt-5">
+          <img
+            class="max-width-150 d-block mx-auto mb-3 img-custom img-fluid"
+            src="img/perfil.png"
+            alt="foto de perfil"
+          />
+        </div>
+        <div class="col-8 mt-5">
+          <h1 class="display-1 display-md-3 display-sm-4 nombre">
+            Kevin Bruno
+          </h1>
+          <h2 class="cargo">Fron-End developer</h2>
+        </div>
+        <div class="row align-items-center">
+          <div class="col d-flex justify-content-center">
+            <p class="text-center">
+              Soy una persona proactiva, organizada y con gran capacidad para el
+              trabajo en equipo. Me adapto con facilidad a nuevos entornos y
+              disfruto aprender constantemente. Cuento con sólidas habilidades
+              de comunicación, resolución de problemas y pensamiento crítico, lo
+              que me permite aportar soluciones eficientes y colaborativas en
+              cualquier proyecto. En cuanto a mis habilidades técnicas, tengo
+              experiencia en [aquí podés personalizar: desarrollo web / análisis
+              de datos / gestión de proyectos, etc.], manejo avanzado de
+              herramientas como [ej: Excel, Python, Java, SQL, etc.], y
+              conocimientos sólidos en [aquí podés agregar metodologías,
+              herramientas, o conocimientos relevantes como Scrum, UX/UI, redes,
+              etc.]. Busco seguir creciendo profesionalmente en un entorno
+              dinámico donde pueda seguir desarrollando tanto mis competencias
+              técnicas como personales.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
+
     <div class="card" style="width: 18rem">
       <img
         src="img/calculadora.png"
-        class="card-img-top img-thumbnail"
+        class="card-img-top img-thumbnail max-width-150"
         alt="..."
       />
       <div class="card-body">
