--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
       </div>
     </div>
     <div class="container">
+      <h1 class="tittle">Lenguajes y Skills</h1>
+      <div class="row"></div>
+    </div>
+    <div class="container">
       <h1 id="contacto" class="title">Contactame!</h1>
       <form class="p-4 rounded d-flex flex-column gap-3" action="">
         <fieldset>
